todo-app/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      name: todo-backend
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: sakuheinonen/todo-backend:1.2
