todo-app/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-frontend
  labels:
    app: todo-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-frontend
  template:
    metadata:
      namespace: project
      name: todo-app-frontend
      labels:
        app: todo-app-frontend
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: todo-app-frontend
          image: sakuheinonen/todo-frontend:2.6
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
