todo-app/manifests/image-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: image-service
  labels:
    app: image-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      namespace: project
      name: image-service
      labels:
        app: image-service
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: image-service
          image: sakuheinonen/image-service:2.6
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
