todo-app/manifests/todo-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  labels:
    app: todo-service
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      namespace: project
      name: todo-service
      labels:
        app: todo-service
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: todo-service
          image: sakuheinonen/todo-service:3.5.1
