todo-app/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
      nodePort: 30080
  type: NodePort
