todo-app/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend-svc
  namespace: project
spec:
  selector:
    app: todo-app-frontend
  ports:
    - protocol: TCP
      targetPort: 80
      name: http
      port: 80
  type: ClusterIP
