todo-app/manifests/image-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service-svc
  namespace: project
spec:
  selector:
    app: image-service
  ports:
    - protocol: TCP
      targetPort: 3000
      name: http
      port: 2345
  type: ClusterIP
