todo-app/manifests/todo-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service-svc
  namespace: project
spec:
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      targetPort: 3001
      name: http
      port: 2346
  type: ClusterIP
