todo-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-svc
                port:
                  number: 2345
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-frontend-svc
                port:
                  number: 80
